Time to do UI 😔

--- a/React/src/Application/app.css
+++ b/React/src/Application/app.css
@@ -111,7 +111,8 @@ dfn {
  */
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0; 
+  color:#2ecc40}
 
 /**
  * Address styling not present in IE 8/9.
