functionally, I think I'm done but if needed I'll do some styling

--- a/React/src/Application/app.css
+++ b/React/src/Application/app.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 /**
  * 1. Set default font family to sans-serif.
  * 2. Prevent iOS text size adjust after orientation change, without disabling
@@ -480,6 +482,9 @@ body {
 
 main {
   display: block; }
+h3{
+  text-align: center;
+}
 
 h1,
 h2,
